testsuite/tests/polykinds/T16902.stderr

T16902.hs:11:1: error: [GHC-01259]
    • Illegal constraint in a kind: (a ~~ k) => *
    • In the data type declaration for ‘F’
